--- a/views/userReport.hbs
+++ b/views/userReport.hbs
@@ -14,7 +14,7 @@
         <div class="mb-4">
             <img src="{{image}}" alt="{{name}} Image" class="mx-auto mb-2 rounded-md" width="100px">
             <p class="text-sm text-gray-600">Age: {{age}} | Sex: {{sex}}</p>
-            <p class="text-sm text-gray-600">Height: {{patient.height}} cm | Weight: {{patient.weight}} kg</p>
+            <p class="text-sm text-gray-600">Height: {{height}} cm | Weight: {{weight}} kg</p>
         </div>
         <a href="{{ecg}}" target="_blank">
             <img src="{{ecg}}" alt="{{name}} ECG Screenshot" class="mb-2 rounded-md" width="200px">
