--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,11 +18,18 @@
             <p class="mb-2"><strong>Height:</strong> {{height}} cm</p>
         </div>
         <img src="{{image}}" alt="User Image" class="mt-4 rounded-full mx-auto" width="100px" />
+        <br>
+        <a href="/editDetails">
+            <button class="bg-white hover:bg-gray-100 text-gray-800 font-bold py-2 px-4 rounded">
+                Edit Details
+            </button>
+        </a>
+        <br>
         <div class="mb-4 mt-4" id="show" style="display: none;">
             <form action="/uploadECG" method="post" enctype="multipart/form-data">
                 <div class="mb-4">
                     <label for="image" class="block text-gray-700 text-sm font-bold mb-2">Upload ECG:</label>
-                    <input type="file" id="image" name="ecgImage" accept="image/*" class="w-full">
+                    <input type="file" id="image" name="ecgImage" accept="image/*" class="w-full" required>
                 </div>
                 <button type="submit"
                     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-8">Upload
