--- a/views/home.hbs
+++ b/views/home.hbs
@@ -29,7 +29,7 @@
             <form action="/uploadECG" method="post" enctype="multipart/form-data">
                 <div class="mb-4">
                     <label for="image" class="block text-gray-700 text-sm font-bold mb-2">Upload ECG:</label>
-                    <input type="file" id="image" name="ecgImage" accept="image/*" class="w-full" required>
+                    <input type="file" id="image" name="ecgImage" accept="image/*" class="w-full" multiple required>
                 </div>
                 <button type="submit"
                     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-8">Upload
