--- a/views/uploaded.hbs
+++ b/views/uploaded.hbs
@@ -35,3 +35,9 @@
         <h1 class="text-3xl font-bold mb-4 text-green-600">Submitted!!!</h1>
     </div>
 </body>
+
+<script>
+    setTimeout(() => {
+        window.location = '/'
+    }, 3000)
+</script>
