--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,8 +7,8 @@
 <body class="flex items-center justify-center h-screen bg-gray-100">
 
     <div class="bg-white p-8 rounded shadow-lg text-center">
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-8 rounded mx-20" onclick="upload()">
-            ECG
+        <button class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-8 rounded mx-20" onclick="upload()">
+            Start ECG
         </button>
         <div class="mt-4">
             <p class="mb-2"><strong>Name:</strong> {{name}}</p>
@@ -20,7 +20,7 @@
         <img src="{{image}}" alt="User Image" class="mt-4 rounded-full mx-auto" width="100px" />
         <br>
         <a href="/editDetails">
-            <button class="bg-white hover:bg-gray-100 text-gray-800 font-bold py-2 px-4 rounded">
+            <button class="bg-white bg-gray-400 hover:bg-gray-600 text-gray-800 font-bold py-2 px-4 rounded">
                 Edit Details
             </button>
         </a>
