--- a/views/addDetails.hbs
+++ b/views/addDetails.hbs
@@ -30,7 +30,7 @@
                 </div>
                 <div class="mb-4">
                     <label for="image" class="block text-gray-700 text-sm font-bold mb-2">Upload Profile Image:</label>
-                    <input type="file" id="image" name="profileImage" accept="image/*" class="w-full">
+                    <input type="file" id="image" name="profileImage" accept="image/*" class="w-full" required>
                 </div>
             </div>
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-8">Save
