--- a/views/userReport.hbs
+++ b/views/userReport.hbs
@@ -23,6 +23,13 @@
             {{/each}}
         </div>
 
+        <a href="comment/{{username}}">
+            <button class="bg-white bg-gray-400 hover:bg-gray-600 text-gray-800 font-bold py-2 px-4 rounded">
+                Add Comments
+            </button>
+        </a>
+        <br>
+        <br>
         <a href="/doctor" class="text-blue-500 hover:underline">Back to All Patients</a>
 
     </div>
