--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,6 +25,14 @@
             </button>
         </a>
         <br>
+        <div class="m-3">
+            <a href="comment">
+                <button class="bg-white bg-gray-200 hover:bg-gray-500 text-gray-900 font-bold py-2 px-4 rounded">
+                    Show Comments
+                </button>
+            </a>
+        </div>
+        <br>
         <div class="mb-4 mt-4" id="show" style="display: none;">
             <form action="/uploadECG" method="post" enctype="multipart/form-data">
                 <div class="mb-4">
