--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -1,6 +1,6 @@
 <body>
     <div class="max-w-lg mx-auto bg-white p-6 rounded shadow-md">
-        <h1 class="text-2xl font-semibold mb-4">Chat</h1>
+        <h1 class="text-2xl font-semibold mb-4">Comments</h1>
 
         <div class="space-y-4">
             {{#each chats}}
@@ -47,4 +47,10 @@
                 alert(err)
             })
     }
+
+    setInterval(() => {
+        if (document.getElementById('comment').value.length === 0) {
+            location.reload()
+        }
+    }, 5000)
 </script>
