--- a/views/createDoctor.hbs
+++ b/views/createDoctor.hbs
@@ -3,6 +3,12 @@
         <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Logout</button>
     </a>
 </div>
+<div class="absolute top-0 left-0 m-4">
+    <a href="admin/delete">
+        <button class="bg-blue-500 rounded hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Delete
+            Doctor</button>
+    </a>
+</div>
 
 <body class="bg-gray-100 flex items-center justify-center h-screen">
 
