--- a/views/adminLogin.hbs
+++ b/views/adminLogin.hbs
@@ -2,7 +2,7 @@
 
     <div class="bg-white p-8 rounded shadow-md w-96">
         <h1 style="color: red;">{{comment}}</h1>
-        <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">ADMIN</h1>
+        <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">ADMIN LOGIN</h1>
 
         <form action="/admin/login" method="post">
             <div class="mb-4">
