--- a/views/userSignUp.hbs
+++ b/views/userSignUp.hbs
@@ -53,6 +53,7 @@
     const check = () => {
         if (document.getElementById('confirm-password').value === document.getElementById('password').value) {
             document.getElementById('submit').disabled = false
+            document.getElementById('msg').innerText = ``
         } else {
             document.getElementById('msg').innerText = `Password does not match`
             document.getElementById('submit').disabled = true
