--- a/views/createDoctor.hbs
+++ b/views/createDoctor.hbs
@@ -29,7 +29,7 @@
                     class="border rounded w-full py-2 px-3 focus:outline-none focus:border-blue-500" required>
             </div>
 
-            <button type="submit"
+            <button type="submit" id="submit"
                 class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline-blue">Create</button>
         </form>
 
@@ -38,12 +38,18 @@
 </body>
 
 <script>
+    document.getElementById('submit').disabled = true
     const verify = () => {
         axios.post('/admin/verify', {
             username: document.getElementById('username').value
         })
             .then(({ data }) => {
                 document.getElementById('alert').innerText = data
+                if (data.length === 0) {
+                    document.getElementById('submit').disabled = false
+                } else {
+                    document.getElementById('submit').disabled = true
+                }
             })
     }
 </script>
