--- a/views/userSignUp.hbs
+++ b/views/userSignUp.hbs
@@ -43,7 +43,7 @@
 
     const verify = () => {
         axios.post('/verify', {
-            username: document.getElementById('username').value
+            username: document.getElementById('username').value.trim()
         })
             .then(({ data }) => {
                 document.getElementById('alert').innerText = data
