--- a/views/404.hbs
+++ b/views/404.hbs
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div>
-        <img src="https://ecg-app.cloud/imagesGroup.png" />
+        <img src="https://ecg-app.cloud/images/Group.png" />
     </div>
 </div>
