--- a/views/userReport.hbs
+++ b/views/userReport.hbs
@@ -25,7 +25,7 @@
 
         <a href="comment/{{username}}">
             <button class="bg-white bg-gray-400 hover:bg-gray-600 text-gray-800 font-bold py-2 px-4 rounded">
-                Add Comments
+                Chat with Patient
             </button>
         </a>
         <br>
