--- a/views/home.hbs
+++ b/views/home.hbs
@@ -28,7 +28,7 @@
         <div class="m-3">
             <a href="comment">
                 <button class="bg-white bg-gray-200 hover:bg-gray-500 text-gray-900 font-bold py-2 px-4 rounded">
-                    Show Comments
+                    Chat with Doctor
                 </button>
             </a>
         </div>
