--- a/views/userReport.hbs
+++ b/views/userReport.hbs
@@ -4,7 +4,7 @@
     </a>
 </div>
 
-<body class="flex flex-col items-center justify-center h-screen bg-gradient-to-r mt-20 pt-20">
+<body class="flex flex-col items-center justify-center bg-gradient-to-r mt-20">
 
     <div class="bg-white p-8 rounded shadow-lg text-center">
         <h2 class="text-3xl font-bold mb-4" style="text-transform: uppercase;">{{name}}</h2>
