--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -1,4 +1,10 @@
-<body>
+<div class="absolute top-0 right-0 m-4">
+    <a href="/logout">
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Logout</button>
+    </a>
+</div>
+
+<body class="mt-20">
     <div class="max-w-lg mx-auto bg-white p-6 rounded shadow-md">
         <h1 class="text-2xl font-semibold mb-4">Chats</h1>
 
